# hr-simulation

./: .gitignore  README.md  obs_schema.json  obs_schema_v2.json  pyproject.toml
.github/workflows/: test.yml
data/: archetypes.json
docs/: training-status.md
horse_racing/: __init__.py  action.py  attributes.py  bt_jockey.py  engine.py  env.py  genome.py  imitation.py  modifiers.py  multi_agent_env.py  physics.py  reward.py  rllib_env.py  self_play_env.py  skills.py  stamina.py  track.py  track_navigator.py  types.py  validation.py
horse_racing/core/: __init__.py  attributes.py  collision.py  exhaustion.py  horse.py  observation.py  physics.py  race.py  stamina.py  track.py  track_navigator.py  types.py
horse_racing/env/: __init__.py  observation.py  racing_env.py  reward.py  single_env.py  solo_env.py
horse_racing/opponents/: JOCKEY.md  __init__.py  behavior_tree.py  (+2 more)
models/: baseline_v1.onnx
notebooks/: finetune.ipynb  finetune_v28.ipynb  train_colab.ipynb  train_curriculum.ipynb  train_full.ipynb  train_multi_agent.ipynb  train_phase2_colab.ipynb  train_phase3_colab.ipynb  train_phased.ipynb  train_resume_colab.ipynb  train_single_agent.ipynb  train_v12_colab.ipynb  train_v13_colab.ipynb  train_v14_colab.ipynb  train_v16_colab.ipynb  train_v17_colab.ipynb  train_v2_baseline.ipynb  train_v2_colab.ipynb  train_v6_colab.ipynb  train_v7_colab.ipynb  train_v8_colab.ipynb  train_v9_colab.ipynb
scripts/: analyze_pace.py  check_stamina_drain.py  debug_step0.py  eval_onnx.py  eval_single_agent.py  evaluate.py  export_onnx.py  export_onnx_rllib.py  plot_race_lines.py  profile_engine.py  quick_eval.py  test_archetype_rewards.py  test_phase2_local.py  test_phase3_local.py  test_training_local.py  train.py  train_all_stages.sh  train_archetypes.py  train_curriculum.py  train_diverse.py  train_full.py  train_phase1_local.py  train_rllib.py  train_sb3.py  train_stage.py  train_v2.py  transfer_sb3_to_rllib.py  tune_bt.py  validate.py  validate_parity.py  watch.py
tests/: test_action.py  test_attributes.py  test_bt_jockey.py  test_bt_knobs.py  test_collision.py  test_engine.py  test_env.py  test_exhaustion.py  test_genome.py  test_imitation.py  test_observation.py  test_opponents.py  test_physics.py  test_race.py  test_reward.py  test_skills.py  test_solo_env.py  test_stamina.py  test_track.py  test_track_navigator.py  test_v2_core.py  test_validation.py
tracks/: curriculum_2_gentle_oval.json  niigata.json
(+50 files in other folders)
