[project]
name = "horse-racing-rl"
version = "0.1.0"
description = "Reinforcement learning multi-agents for horse racing simulation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.0.0",
    "pettingzoo>=1.24.0",
    "numpy>=1.26.0",
    "stable-baselines3>=2.3.0",
    "supersuit>=3.9.0",
    "httpx>=0.27.0",
    "onnx>=1.21.0",
    "onnxruntime>=1.24.4",
    "onnxscript>=0.6.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
]

[project.optional-dependencies]
ray = ["ray[rllib]>=2.9.0"]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["horse_racing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
