[project]
name = "horse-racing-rl"
version = "2.0.0"
description = "RL training environment for horse racing simulation (v2)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "stable-baselines3>=2.3.0",
    "torch>=2.0.0",
    "onnx>=1.21.0",
    "onnxruntime>=1.24.0",
    "onnxscript>=0.2.0",
    "tensorboard>=2.20.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
multi-agent = [
    "pettingzoo>=1.24.0",
    "ray[rllib]>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["horse_racing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests that simulate full races (deselect with '-m \"not slow\"')"]
